--- a/styles/index/index.css
+++ b/styles/index/index.css
@@ -19,16 +19,49 @@
 }
 
 .table {
-  height: auto;
   width: 100%;
 }
 
+.tableHead {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+}
+
 .tableHead > * {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #6aa4ea;
   height: 6.25rem;
-  border: 2px solid #242424;
+  border-right: 2px solid #353535;
+  border-bottom: 2px solid #353535;
+}
+
+.tableHeadDesc {
+  grid-column: 1 / 3;
+}
+
+.tableUnit {
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
 }
 
 .tableUnit > * {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 5rem;
-  border: 2px solid #242424;
+  border-right: 2px dotted #353535;
+  border-bottom: 2px dotted #353535;
+}
+
+.tableUnitDesc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  grid-column: 1 / 3;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0 .5rem;
 }
