--- a/styles/index/index.scss
+++ b/styles/index/index.scss
@@ -18,19 +18,38 @@
     }
 }
 
-.table {   
-    height: auto;
+.table {
     width: 100%;
     &Head {    
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);    
         & > * {
+            color: white;
+            @include flexCenter;
+            background: rgb(106, 164, 234);
             height: 6.25rem;
-            border: 2px solid rgb(36, 36, 36);
+            border-right: 2px solid rgb(53, 53, 53);
+            border-bottom: 2px solid rgb(53, 53, 53);
+        }
+        &Desc {
+            grid-column: 1 / 3;
         }
     }
     &Unit {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
         & > * {
+            @include flexCenter;
             height: 5rem;
-            border: 2px solid rgb(36, 36, 36);
+            border-right: 2px dotted rgb(53, 53, 53);
+            border-bottom: 2px dotted rgb(53, 53, 53);
+        }
+        &Desc {
+            @include flexCenter;
+            grid-column: 1 / 3;
+            flex-direction: column;
+            align-items: flex-start;
+            padding: 0 .5rem;
         }
     }
 }
