--- a/styles/index/index.scss
+++ b/styles/index/index.scss
@@ -9,11 +9,16 @@
     height: 6.25rem;
     justify-content: space-between;
     padding: 0 1.25rem;
+    box-shadow: 0px 3px 6px rgb(228, 228, 228);
     &Title {
         @include flexCenter;
         font-weight: bolder;
         font-size: 1.75rem;
         & img {margin-right: .5rem}
+    }
+    &Actions {
+        @include flexCenter;
+        & * {@include flexCenter;}
     }
 }
 
@@ -36,14 +41,14 @@
     width: 100%;
     &Head {    
         display: grid;
-        grid-template-columns: repeat(6, 1fr);    
+        grid-template-columns: repeat(6, 1fr);  
         & > * {
             color: white;
             @include flexCenter;
             background: rgb(106, 164, 234);
-            height: 6.25rem;
+            height: 4rem;
             border-right: 2px solid rgb(53, 53, 53);
-            border-bottom: 2px solid rgb(53, 53, 53);
+            border-bottom: 2px dotted rgb(53, 53, 53);
         }
         &Desc {
             grid-column: 1 / 3;
@@ -64,6 +69,19 @@
             flex-direction: column;
             align-items: flex-start;
             padding: 0 .5rem;
+        }
+    }
+}
+
+@media screen and (max-width: 860px) {
+    
+}
+
+@media screen and (max-width: 442px) {
+    .header {
+        &Title {
+            & img {width: 48px;}
+            & p {display: none;}
         }
     }
 }
