--- a/styles/common/common.scss
+++ b/styles/common/common.scss
@@ -77,10 +77,12 @@
     width: 100%;
 }
 
-.logoutBtn {
+.logoutBtn, .homeButton {
     cursor: pointer;
     background: none;
 }
+
+.homeButton {margin-right: 1rem}
 
 .goToSignupLogin {
     @include linkStyles;
