--- a/styles/index/index.css
+++ b/styles/index/index.css
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: black;
   font-weight: bolder;
   font-size: 1.4rem;
 }
