--- a/styles/index/index.scss
+++ b/styles/index/index.scss
@@ -12,6 +12,7 @@
     box-shadow: 0px 3px 6px rgb(228, 228, 228);
     &Title {
         @include flexCenter;
+        color: black;
         font-weight: bolder;
         font-size: 1.4rem;
         & img {margin-right: .5rem}
