--- a/styles/reportAbug/reportABug.css
+++ b/styles/reportAbug/reportABug.css
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  color: black;
   font-weight: bolder;
   font-size: 1.4rem;
 }
