--- a/styles/reportAbug/reportABug.scss
+++ b/styles/reportAbug/reportABug.scss
@@ -12,6 +12,7 @@
     box-shadow: 0px 3px 6px rgb(228, 228, 228);
     &Title {
         @include flexCenter;
+        color: black;
         font-weight: bolder;
         font-size: 1.4rem;
 
@@ -33,7 +34,6 @@
     @include flexCenter;
     flex-direction: column;
     margin: 50px;
-
     & legend {
         font-weight: 600;
         font-size: 1.5rem;
