finish add bug function + anim & redirection

--- a/styles/reportAbug/reportABug.css
+++ b/styles/reportAbug/reportABug.css
@@ -60,3 +60,17 @@
   background: #f1f1f1;
   border-radius: .5rem;
 }
+
+.animCtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 10vh;
+}
+
+.validationAnim {
+  width: 300px;
+  height: 300px;
+  align-self: center;
+  justify-self: center;
+}
