--- a/styles/index/index.scss
+++ b/styles/index/index.scss
@@ -61,7 +61,8 @@
         grid-template-columns: repeat(6, 1fr);
         & > * {
             @include flexCenter;
-            height: 5rem;
+            height: auto;
+            padding: .5rem 0;
             border-right: 2px dotted rgb(53, 53, 53);
             border-bottom: 2px dotted rgb(53, 53, 53);
         }
@@ -70,13 +71,34 @@
             grid-column: 1 / 3;
             flex-direction: column;
             align-items: flex-start;
-            padding: 0 .5rem;
+            padding: 1rem .5rem;
+            &Title {font-weight: 600;}
+            &Desc {font-size: .8rem;}
         }
     }
 }
 
 @media screen and (max-width: 860px) {
-    
+    .table {
+        &Head {display: none;}
+        &Unit {
+            margin: .5rem;
+            grid-template-columns: 1fr;
+            background: rgb(239, 239, 239);
+            border-bottom: none;
+            position: relative;
+            & > * {
+                grid-column: 1 / 3;
+                justify-content: flex-start;
+                border: none;
+                margin-left: 1rem;
+            }
+            &Desc {
+                padding: 1rem 0;
+            }
+        }
+    }
+
 }
 
 @media screen and (max-width: 442px) {
