--- a/styles/loginSignup/loginSignup.scss
+++ b/styles/loginSignup/loginSignup.scss
@@ -3,6 +3,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    background: rgb(49, 49, 49);
 }
 
 #authForm {
