--- a/styles/index/index.scss
+++ b/styles/index/index.scss
@@ -87,6 +87,14 @@
             background: rgb(239, 239, 239);
             border-bottom: none;
             position: relative;
+            // &::before {
+            //     content: '';
+            //     height: 4px;
+            //     width: 100%;
+            //     position: absolute;
+            //     top: 0;
+            //     background: rgb(255, 111, 111);
+            // }
             & > * {
                 grid-column: 1 / 3;
                 justify-content: flex-start;
