--- a/styles/index/index.css
+++ b/styles/index/index.css
@@ -79,8 +79,6 @@
   justify-content: center;
   background: #6aa4ea;
   height: 4rem;
-  border-right: 2px solid #353535;
-  border-bottom: 2px dotted #353535;
 }
 
 .tableHeadDesc {
@@ -90,6 +88,8 @@
 .tableUnit {
   display: grid;
   grid-template-columns: repeat(6, 1fr);
+  margin: .5rem;
+  background: #efefef;
 }
 
 .tableUnit > * {
@@ -98,8 +98,6 @@
   justify-content: center;
   height: auto;
   padding: .5rem 0;
-  border-right: 2px dotted #353535;
-  border-bottom: 2px dotted #353535;
 }
 
 .tableUnitDesc {
@@ -110,10 +108,13 @@
   flex-direction: column;
   align-items: flex-start;
   padding: 1rem .5rem;
+  margin-right: 1rem;
+  word-break: break-word;
 }
 
 .tableUnitDescTitle {
   font-weight: 600;
+  margin-bottom: 1rem;
 }
 
 .tableUnitDescDesc {
@@ -127,7 +128,6 @@
   .tableUnit {
     margin: .5rem;
     grid-template-columns: 1fr;
-    background: #efefef;
     border-bottom: none;
     position: relative;
   }
@@ -139,6 +139,7 @@
   }
   .tableUnitDesc {
     padding: 1rem 0;
+    margin-top: 1.5rem;
   }
 }
 
