--- a/styles/reportAbug/reportABug.scss
+++ b/styles/reportAbug/reportABug.scss
@@ -34,7 +34,7 @@
     @include flexCenter;
     flex-direction: column;
     margin: 50px;
-    & legend {
+    & h1 {
         font-weight: 600;
         font-size: 1.5rem;
     }
