--- a/styles/loginSignup/loginSignup.scss
+++ b/styles/loginSignup/loginSignup.scss
@@ -14,7 +14,7 @@ body {
     align-items: center;
     flex-direction: column;
     padding: 2rem;
-    & legend {
+    & h1 {
         padding: 2rem;
         font-size: 3rem;
     }
